--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ thiserror = "2"
 serde_json = { version = "1.0", optional = true }
 ctor = "0.3.6"
 paranoid-android = "*"
+itertools = "0.14.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 tracing-subscriber = { version = "0.3", features = [
