--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,50 +34,17 @@ criterion = { version = "0.5", features = ["html_reports"] }
 [dependencies]
 glam = { version = "0.30", features = [
     "core-simd",
-] } #SIMD supported vector types\
-palette = "0.7.6"
+] } #SIMD supported 
+palette = "0.7" # for color manipulation
+
 cfg-if = "1"
-tracing = { version = "0.1", features = ["std"], default-features = false }
-tracing-subscriber = { version = "0.3", default-features = false }
-tracing-error = { version = "*", default-features = false }
 thiserror = "2"
 serde_json = { version = "1.0", optional = true }
-ctor = "0.3.6"
-paranoid-android = "*"
-itertools = "0.14.0"
-ahash = "0.8.11"
+itertools = "0.14"
+ahash = "0.8" # for hashmaps
 uuid = {version = "1", features = ["v4"] }
-
-[target.'cfg(target_os = "windows")'.dependencies]
-tracing-subscriber = { version = "0.3", features = [
-    "fmt",
-    "env-filter",
-    "smallvec",
-], default-features = false }
-
-[target.'cfg(target_os = "macos")'.dependencies]
-minifb = { version = "0.28", optional = true }
-plotters = { version = "0.3", optional = true }
-tracing-subscriber = { version = "0.3", features = [
-    "fmt",
-    "env-filter",
-    "smallvec",
-], default-features = false }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-minifb = { version = "0.28", optional = true }
-plotters = { version = "0.3", optional = true }
-tracing-subscriber = { version = "0.3", features = [
-    "fmt",
-    "env-filter",
-    "smallvec",
-], default-features = false }
-
-
-[target.'cfg(target_os = "android")'.dependencies]
-android_logger = "0.14"
 log = "0.4"
-paranoid-android = { version = "*", optional = true }
+
 
 [build-dependencies]
 cbindgen = { version = "0.28", optional = true }
